--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,19 @@
-<html></html>
-<span>Soon.</span>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Found You</title>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+    <meta content="Group Buddies FoundYou Found You Braga" name="keywords" />
+    <meta content="Group Buddies" name="author" />
+    <meta encoding="utf-8" />
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="/favicon.ico" rel="shortcut icon" />
+  </head>
+  <body>
+    <h1>Markup examples</h1>
+    <div id="content">
+      <p>This example shows you how a basic Slim file looks like.</p>
+    </div>
+    <div id="footer">Copyright © GB</div>
+  </body>
+</html>
