new version of foundyou

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Found You</title>
+    <title>FoundYou</title>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta content="Group Buddies FoundYou Found You Braga" name="keywords" />
     <meta content="Group Buddies" name="author" />
@@ -10,10 +10,57 @@
     <link href="/favicon.ico" rel="shortcut icon" />
   </head>
   <body>
-    <h1>Markup examples</h1>
-    <div id="content">
-      <p>This example shows you how a basic Slim file looks like.</p>
-    </div>
-    <div id="footer">Copyright © GB</div>
+    <article class="background">
+      <section>
+        <header>
+          <img src="images/logo_big.png" />
+        </header>
+        <h1>FoundYou is a monthly event, that takes place in several places, where entrepreneurs meet to get in touch with new startups and projects looking for co-founders.</h1>
+      </section>
+      <section class="next_event">
+        <h1>Next Event:</h1>
+        <span class="city">BRAGA</span><span class="date">13 January 5:30PM</span><a class="btn" href="#">Submit your idea</a><a class="link" href="">Want to have FoundYou on your hometown?</a>
+      </section>
+    </article>
+    <article class="top_bar">
+      <section>
+        <img src="images/logo_small.png" />
+      </section>
+    </article>
+    <article class="content">
+      <section class="left_column">
+        <h1>BRAGA</h1>
+        <img src="images/braga.jpg" />
+        <hr />
+        <a class="local" href="">Factory Business Center</a><img class="geo" src="images/gps.png" /><span class="date">13 January 5:30PM</span><a class="btn" href="#">Attend</a><a class="btn" href="#">Submit your idea</a>
+      </section>
+      <section class="right_column">
+        <h1>YOUR CITY</h1>
+        <h2>What you need to start a FoundYou?</h2>
+        <ul>
+          <li>Strong determination.</li>
+          <li>Good networking skills.</li>
+          <li>Be bold.</li>
+        </ul>
+        <a class="btn" href="#">Start a FoundYou</a>
+      </section>
+    </article>
+    <article class="members">
+      <section class="row1">
+        <h1>Look who stopped by</h1>
+        <img class="member_logo" src="images/logo1.png" /><img class="member_logo" src="images/logo2.png" /><img class="member_logo" src="images/logo3.png" /><img class="member_logo" src="images/logo4.png" />
+      </section>
+    </article>
+    <footer>
+      <section class="organization">
+        <h1>Organization</h1>
+        <img src="images/org1.png" /><img src="images/org2.png" />
+      </section>
+      <section class="social">
+        <h1>Links</h1>
+        <a href="" id="facebook"></a><span class="social_link">Facebook</span><a href="" id="twitter"></a><span class="social_link">twitter</span>
+      </section>
+      <span class="gb">Copyright © GB</span>
+    </footer>
   </body>
 </html>
