--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       </section>
       <section class="next_event">
         <h1>Next Event:</h1>
-        <span class="city">BRAGA</span><span class="date">13 January 5:30PM</span><a class="btn" href="#">Submit your idea</a><a class="link" href="">Want to have FoundYou on your hometown?</a>
+        <span class="city">BRAGA</span><span class="date">13 January 5:30PM</span><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Submit your idea</a><a class="link" href="http://groupbuddies.typeform.com/to/kwiVxw">Want to have FoundYou on your hometown?</a>
       </section>
     </article>
     <article class="top_bar">
@@ -32,7 +32,7 @@
         <h1>BRAGA</h1>
         <img src="images/braga.jpg" />
         <hr />
-        <a class="local" href="">Factory Business Center</a><img class="geo" src="images/gps.png" /><span class="date">13 January 5:30PM</span><a class="btn" href="#">Attend</a><a class="btn" href="#">Submit your idea</a>
+        <a class="local" href="">Factory Business Center</a><img class="geo" src="images/gps.png" /><span class="date">13 January 5:30PM</span><a class="btn" href="http://foundyou-braga.eventbrite.pt">Attend</a><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Submit your idea</a>
       </section>
       <section class="right_column">
         <h1>YOUR CITY</h1>
@@ -42,7 +42,7 @@
           <li>Good networking skills.</li>
           <li>Be bold.</li>
         </ul>
-        <a class="btn" href="#">Start a FoundYou</a>
+        <a class="btn" href="http://groupbuddies.typeform.com/to/kwiVxw">Start a FoundYou</a>
       </section>
     </article>
     <article class="members">
