altered social links style

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     <article class="members">
       <section class="row1">
         <h1>Look who stopped by</h1>
-        <img class="member_logo" src="images/logo1.png" /><img class="member_logo" src="images/logo2.png" /><img class="member_logo" src="images/logo3.png" /><img class="member_logo" src="images/logo4.png" />
+        <img class="member_logo" src="images/timly.png" /><img class="member_logo" src="images/logo2.png" /><img class="member_logo" src="images/logo3.png" /><img class="member_logo" src="images/logo4.png" />
       </section>
     </article>
     <footer>
@@ -56,11 +56,20 @@
         <h1>Organization</h1>
         <img src="images/org1.png" /><img src="images/org2.png" />
       </section>
-      <section class="social">
+      <section class="social social_facebook">
         <h1>Links</h1>
-        <a href="" id="facebook"></a><span class="social_link">Facebook</span><a href="" id="twitter"></a><span class="social_link">twitter</span>
+        <div id="facebook">
+          <img src="images/facebook.png" />
+        </div>
+        <a href="">facebook.com/foundyou</a>
       </section>
-      <span class="gb">Copyright © GB</span>
+      <section class="social social_twitter">
+        <div id="twitter">
+          <img src="images/twitter.png" />
+        </div>
+        <a href="">twitter.com/foundyou</a>
+      </section>
+      <span class="gb">© 2013 Group Buddies. All rights reserved.</span>
     </footer>
   </body>
 </html>
