include images and fixed some margins

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta content="Group Buddies" name="author" />
     <meta encoding="utf-8" />
     <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="css/animate-custom.css" rel="stylesheet" type="text/css" />
     <link href="/favicon.ico" rel="shortcut icon" />
   </head>
   <body>
@@ -14,12 +15,12 @@
       <section>
         <header>
           <img src="images/logo_big.png" />
+          <h1>FoundYou is a monthly event, that takes place in several places, where entrepreneurs meet to get in touch with new startups and projects looking for co-founders.</h1>
+          <section class="next_event">
+            <h1>Next Event:</h1>
+            <span class="city">BRAGA</span><span class="date">13 January 5:30PM</span><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Submit your idea</a><a class="link" href="http://groupbuddies.typeform.com/to/kwiVxw">Want to have FoundYou on your hometown?</a>
+          </section>
         </header>
-        <h1>FoundYou is a monthly event, that takes place in several places, where entrepreneurs meet to get in touch with new startups and projects looking for co-founders.</h1>
-      </section>
-      <section class="next_event">
-        <h1>Next Event:</h1>
-        <span class="city">BRAGA</span><span class="date">13 January 5:30PM</span><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Submit your idea</a><a class="link" href="http://groupbuddies.typeform.com/to/kwiVxw">Want to have FoundYou on your hometown?</a>
       </section>
     </article>
     <article class="top_bar">
@@ -48,7 +49,7 @@
     <article class="members">
       <section class="row1">
         <h1>Look who stopped by</h1>
-        <img class="member_logo" src="images/timly.png" /><img class="member_logo" src="images/logo2.png" /><img class="member_logo" src="images/logo3.png" /><img class="member_logo" src="images/logo4.png" />
+        <a href="http://imo.timly.co/"><img class="member_logo" src="images/timly.png" /></a><a href="https://tymr.com/"><img class="member_logo" src="images/tymr.png" /></a><a href="http://www.blinqer.com/site/index.html#/start"><img class="member_logo" src="images/blinqer.png" /></a><a href="http://www.uplaypro.com"><img class="member_logo" src="images/uplay.png" /></a>
       </section>
     </article>
     <footer>
