reedited images and added border

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     <footer>
       <section class="organization">
         <h1>Organization</h1>
-        <img src="images/org1.png" /><img src="images/org2.png" />
+        <a href="http://www.factoryworkstyle.com/"><img src="images/org1.png" /></a><a href="http://www.groupbuddies.com"><img src="images/org2.png" /></a>
       </section>
       <section class="social social_facebook">
         <h1>Links</h1>
