fixed some bugs in the margins and floats

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
           <h1>FoundYou is a monthly event, that takes place in several places, where entrepreneurs meet to get in touch with new startups and projects looking for co-founders.</h1>
           <section class="next_event">
             <h1>Next Event:</h1>
-            <span class="city">BRAGA</span><span class="date">13 January 5:30PM</span><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Submit your idea</a><a class="link" href="http://groupbuddies.typeform.com/to/kwiVxw">Want to have FoundYou on your hometown?</a>
+            <span class="city">BRAGA</span><span class="date">13 January / 5:30PM</span><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Submit your idea</a><a class="link" href="http://groupbuddies.typeform.com/to/kwiVxw">Want to have FoundYou on your hometown?</a>
           </section>
         </header>
       </section>
@@ -30,9 +30,7 @@
     <article class="content">
       <section class="left_column">
         <h1>BRAGA</h1>
-        <img src="images/braga.jpg" />
-        <hr />
-        <a class="local" href="">Factory Business Center</a><img class="geo" src="images/gps.png" /><span class="date">13 January 5:30PM</span><a class="btn" href="http://foundyou-braga.eventbrite.pt">Attend</a><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Submit your idea</a>
+        <img src="images/braga.jpg" /><a class="local" href="">Factory Business Center</a><img class="geo" src="images/gps.png" /><span class="date">13 January / 5:30PM</span><a class="btn" href="http://foundyou-braga.eventbrite.pt">Attend</a><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Submit your idea</a>
       </section>
       <section class="right_column">
         <h1>YOUR CITY</h1>
@@ -61,13 +59,13 @@
         <div id="facebook">
           <img src="images/facebook.png" />
         </div>
-        <a href="">facebook.com/foundyou</a>
+        <a class="social_link" href="">facebook.com/foundyou</a>
       </section>
       <section class="social social_twitter">
         <div id="twitter">
           <img src="images/twitter.png" />
         </div>
-        <a href="">twitter.com/foundyou</a>
+        <a class="social_link" href="">twitter.com/foundyou</a>
       </section>
       <span class="gb">© 2013 Group Buddies. All rights reserved.</span>
     </footer>
