changes to the copy and final touches

--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,15 @@
       <section>
         <header>
           <img src="images/logo_big.png" />
-          <h1>FoundYou is a monthly event, that takes place in several places, where entrepreneurs meet to get in touch with new startups and projects looking for co-founders.</h1>
+          <h1>FoundYou is a monthly event, where entrepreneurs meet to get in touch with new projects, looking for the perfect cofounder. </h1>
+          <h1>You're most welcome to join in.</h1>
           <section class="next_event">
             <h1>Next Event:</h1>
-            <span class="city">BRAGA</span><span class="date">13 January / 5:30PM</span><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Submit your idea</a><a class="link" href="http://groupbuddies.typeform.com/to/kwiVxw">Want to have FoundYou on your hometown?</a>
+            <span class="city">BRAGA</span><span class="date">13 January / 5:30PM</span>
+            <div class="button">
+              <span class="subtitle">Need some skill to complete your team?</span><a class="btn" href="http://foundyou-braga.eventbrite.pt">Find a cofounder</a>
+            </div>
+            <a class="link" href="http://groupbuddies.typeform.com/to/kwiVxw">Want to have FoundYou on your hometown?</a>
           </section>
         </header>
       </section>
@@ -46,7 +51,13 @@
     <article class="content">
       <section class="left_column">
         <h1>BRAGA</h1>
-        <img src="images/braga.jpg" /><a class="local" href="">Factory Business Center</a><img class="geo" src="images/gps.png" /><span class="date">13 January / 5:30PM</span><a class="btn" href="http://foundyou-braga.eventbrite.pt">Attend</a><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Submit your idea</a>
+        <img src="images/braga.jpg" /><a class="local" href="">Factory Business Center</a><img class="geo" src="images/gps.png" /><span class="date">13 January / 5:30PM</span>
+        <div class="button">
+          <span class="subtitle">Need some skill to complete your team?</span><a class="btn" href="http://foundyou-braga.eventbrite.pt">Find a cofounder</a>
+        </div>
+        <div class="button">
+          <span class="subtitle">Got the skills and the will to succeed?</span><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Join a project</a>
+        </div>
       </section>
       <section class="right_column">
         <h1>YOUR CITY</h1>
@@ -56,7 +67,9 @@
           <li>Good networking skills.</li>
           <li>Be bold.</li>
         </ul>
-        <a class="btn" href="http://groupbuddies.typeform.com/to/kwiVxw">Start a FoundYou</a>
+        <div class="button">
+          <span class="subtitle">Want to create a FoundYou in your town?</span><a class="btn" href="http://groupbuddies.typeform.com/to/kwiVxw">Start a FoundYou</a>
+        </div>
       </section>
     </article>
     <article class="members">
