--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta content="Group Buddies" name="author" />
     <meta encoding="utf-8" />
     <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
     <link href="/favicon.ico" rel="shortcut icon" />
     <script type="text/javascript">jQuery(function($){
@@ -51,7 +52,7 @@
     <article class="content">
       <section class="left_column">
         <h1>BRAGA</h1>
-        <img src="images/braga.jpg" /><a class="local" href="">Factory Business Center</a><img class="geo" src="images/gps.png" /><span class="date">13 January / 5:30PM</span>
+        <img src="images/braga.jpg" /><a class="local" href="https://maps.google.com/maps?q=Factory+|+Business+Center+%26+CoWork,+Braga,+Portugal&hl=en&ll=41.53413,-8.419197&spn=0.004859,0.009645&sll=37.0625,-95.677068&sspn=41.95363,79.013672&oq=factory+business+&hq=Factory+|+Business+Center+%26+CoWork,&hnear=Braga,+Portugal&t=m&z=17&iwloc=A">Factory Business Center</a><img class="geo" src="images/gps.png" /><span class="date">13 January / 5:30PM</span>
         <div class="button">
           <span class="subtitle">Need some skill to complete your team?</span><a class="btn" href="http://foundyou-braga.eventbrite.pt">Find a cofounder</a>
         </div>
@@ -81,7 +82,7 @@
     <footer>
       <section class="organization">
         <h1>Organization</h1>
-        <a href="http://www.groupbuddies.com"><img src="images/org2.png" /></a><a href="http://www.factoryworkstyle.com/"><img src="images/org1.png" /></a>
+        <a href="http://www.groupbuddies.com"><img src="images/org2.png" /></a><a href="http://www.factoryworkstyle.com/"><img src="images/org1.png" /></a><a href="#"><img src="images/org3.png" /></a>
       </section>
       <section class="social social_facebook">
         <h1>Links</h1>
@@ -94,9 +95,9 @@
         <div id="twitter">
           <img src="images/twitter.png" />
         </div>
-        <a class="social_link" href="">twitter.com/foundyou</a>
+        <a class="social_link" href="https://www.facebook.com/VDFoundYou">twitter.com/foundyou</a>
       </section>
-      <span class="gb">© 2013 Group Buddies. All rights reserved.</span>
+      <span class="gb">© 2013 <a href="http://www.groupbuddies.com">Group Buddies. </a> All rights reserved.</span>
     </footer>
   </body>
 </html>
