fixed button going up on click

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta content="Group Buddies FoundYou Found You Braga" name="keywords" />
     <meta content="Group Buddies" name="author" />
     <meta encoding="utf-8" />
+    <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic" rel="stylesheet" type="text/css" />
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
@@ -37,9 +38,9 @@
             <h1>Next Event:</h1>
             <span class="city">BRAGA</span><span class="date">13 January / 5:30PM</span>
             <div class="button">
-              <span class="subtitle">Need some skill to complete your team?</span><a class="btn" href="http://foundyou-braga.eventbrite.pt">Find a cofounder</a>
+              <span class="subtitle">Need some skill to complete your team?</span><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Find a cofounder</a>
             </div>
-            <a class="link" href="http://groupbuddies.typeform.com/to/kwiVxw">Want to have FoundYou on your hometown?</a>
+            <a class="link" href="https://groupbuddies.typeform.com/to/SkQkFO">Want to have FoundYou on your hometown?</a>
           </section>
         </header>
       </section>
@@ -54,10 +55,10 @@
         <h1>BRAGA</h1>
         <img src="images/braga.jpg" /><a class="local" href="https://maps.google.com/maps?q=Factory+|+Business+Center+%26+CoWork,+Braga,+Portugal&hl=en&ll=41.53413,-8.419197&spn=0.004859,0.009645&sll=37.0625,-95.677068&sspn=41.95363,79.013672&oq=factory+business+&hq=Factory+|+Business+Center+%26+CoWork,&hnear=Braga,+Portugal&t=m&z=17&iwloc=A">Factory Business Center</a><img class="geo" src="images/gps.png" /><span class="date">13 January / 5:30PM</span>
         <div class="button">
-          <span class="subtitle">Need some skill to complete your team?</span><a class="btn" href="http://foundyou-braga.eventbrite.pt">Find a cofounder</a>
+          <span class="subtitle">Need some skill to complete your team?</span><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Find a cofounder</a>
         </div>
         <div class="button">
-          <span class="subtitle">Got the skills and the will to succeed?</span><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Join a project</a>
+          <span class="subtitle">Got the skills and the will to succeed?</span><a class="btn" href="http://foundyou-braga.eventbrite.pt">Join a project</a>
         </div>
       </section>
       <section class="right_column">
@@ -69,7 +70,7 @@
           <li>Be bold.</li>
         </ul>
         <div class="button">
-          <span class="subtitle">Want to create a FoundYou in your town?</span><a class="btn" href="http://groupbuddies.typeform.com/to/kwiVxw">Start a FoundYou</a>
+          <span class="subtitle">Want to create a FoundYou in your town?</span><a class="btn" href="https://groupbuddies.typeform.com/to/SkQkFO">Start a FoundYou</a>
         </div>
       </section>
     </article>
@@ -95,7 +96,7 @@
         <div id="twitter">
           <img src="images/twitter.png" />
         </div>
-        <a class="social_link" href="https://www.facebook.com/VDFoundYou">twitter.com/foundyou</a>
+        <a class="social_link" href="https://www.twitter.com/VDFoundYou">twitter.com/VDFoundyou</a>
       </section>
       <span class="gb">© 2013 <a href="http://www.groupbuddies.com">Group Buddies. </a> All rights reserved.</span>
     </footer>
