fixed big margin on the right of the image

--- a/public/index.html
+++ b/public/index.html
@@ -85,18 +85,20 @@
         <h1>Organization</h1>
         <a href="http://www.groupbuddies.com"><img src="images/org2.png" /></a><a href="http://www.factoryworkstyle.com/"><img src="images/org1.png" /></a><a href="#"><img src="images/org3.png" /></a>
       </section>
-      <section class="social social_facebook">
-        <h1>Links</h1>
-        <div id="facebook">
-          <img src="images/facebook.png" />
-        </div>
-        <a class="social_link" href="https://www.facebook.com/VDFoundYou">facebook.com/VDFoundyou</a>
-      </section>
-      <section class="social social_twitter">
-        <div id="twitter">
-          <img src="images/twitter.png" />
-        </div>
-        <a class="social_link" href="https://www.twitter.com/VDFoundYou">twitter.com/VDFoundyou</a>
+      <section class="social">
+        <section class="social_facebook">
+          <h1>Links</h1>
+          <div id="facebook">
+            <img src="images/facebook.png" />
+          </div>
+          <a class="social_link" href="https://www.facebook.com/VDFoundYou">facebook.com/VDFoundyou</a>
+        </section>
+        <section class="social_twitter">
+          <div id="twitter">
+            <img src="images/twitter.png" />
+          </div>
+          <a class="social_link" href="https://www.twitter.com/VDFoundYou">twitter.com/VDFoundyou</a>
+        </section>
       </section>
       <span class="gb">© 2013 <a href="http://www.groupbuddies.com">Group Buddies. </a> All rights reserved.</span>
     </footer>
