--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       <section>
         <header>
           <img src="images/logo_big.png" />
-          <h1>FoundYou is a monthly event, where entrepreneurs meet to get in touch with new projects, looking for the perfect cofounder. </h1>
+          <h1>FoundYou is a monthly event, where entrepreneurs meet to get in touch with new projects, looking for the perfect cofounder.</h1>
           <h1>You're most welcome to join in.</h1>
           <section class="next_event">
             <h1>Next Event:</h1>
@@ -77,7 +77,7 @@
     <article class="members">
       <section class="row1">
         <h1>Look who stopped by</h1>
-        <a href="http://imo.timly.co/"><img class="member_logo" src="images/timly.png" /></a><a href="https://tymr.com/"><img class="member_logo" src="images/tymr.png" /></a><a href="http://www.blinqer.com/site/index.html#/start"><img class="member_logo" src="images/blinqer.png" /></a><a href="http://www.uplaypro.com"><img class="member_logo" src="images/uplay.png" /></a>
+        <a href="http://imo.timly.co/"><img class="member_logo" src="images/timly.png" /></a><a href="https://tymr.com/"><img class="member_logo" src="images/tymr.png" /></a><a href="http://www.blinqer.com/site/index.html#/start"><img class="member_logo" src="images/blinqer_logo.png" /></a><a href="http://www.uplaypro.com"><img class="member_logo" src="images/uplay.png" /></a>
       </section>
     </article>
     <footer>
@@ -100,7 +100,7 @@
           <a class="social_link" href="https://www.twitter.com/VDFoundYou">twitter.com/VDFoundyou</a>
         </section>
       </section>
-      <span class="gb">© 2013 <a href="http://www.groupbuddies.com">Group Buddies. </a> All rights reserved.</span>
+      <span class="gb">© 2013<a href="http://www.groupbuddies.com">Group Buddies.</a> All rights reserved.</span>
     </footer>
   </body>
 </html>
