--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
           <h1>You're most welcome to join in.</h1>
           <section class="next_event">
             <h1>Next Event:</h1>
-            <span class="city">BRAGA</span><span class="date">13 January / 5:30PM</span>
+            <span class="city">BRAGA</span><span class="date">7 May / 7:00PM</span>
             <div class="button">
               <span class="subtitle">Need some skill to complete your team?</span><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Find a cofounder</a>
             </div>
@@ -53,12 +53,12 @@
     <article class="content">
       <section class="left_column">
         <h1>BRAGA</h1>
-        <img src="images/braga.jpg" /><a class="local" href="https://maps.google.com/maps?q=Factory+|+Business+Center+%26+CoWork,+Braga,+Portugal&hl=en&ll=41.53413,-8.419197&spn=0.004859,0.009645&sll=37.0625,-95.677068&sspn=41.95363,79.013672&oq=factory+business+&hq=Factory+|+Business+Center+%26+CoWork,&hnear=Braga,+Portugal&t=m&z=17&iwloc=A">Factory Business Center</a><img class="geo" src="images/gps.png" /><span class="date">13 January / 5:30PM</span>
+        <img src="images/braga.jpg" /><a class="local" href="https://maps.google.com/maps?q=Factory+|+Business+Center+%26+CoWork,+Braga,+Portugal&hl=en&ll=41.53413,-8.419197&spn=0.004859,0.009645&sll=37.0625,-95.677068&sspn=41.95363,79.013672&oq=factory+business+&hq=Factory+|+Business+Center+%26+CoWork,&hnear=Braga,+Portugal&t=m&z=17&iwloc=A">Factory Business Center</a><img class="geo" src="images/gps.png" /><span class="date">7 May / 7:00PM</span><a href="http://www.meetup.com/BragaStartupCoffee/"><img class="meetup" src="images/meetup.png" /></a>
         <div class="button">
           <span class="subtitle">Need some skill to complete your team?</span><a class="btn" href="https://groupbuddies.typeform.com/to/kwiVxw">Find a cofounder</a>
         </div>
         <div class="button">
-          <span class="subtitle">Got the skills and the will to succeed?</span><a class="btn" href="http://foundyou-braga.eventbrite.pt">Join a project</a>
+          <span class="subtitle">Got the skills and the will to succeed?</span><a class="btn" href="http://www.meetup.com/BragaStartupCoffee/">Join a project</a>
         </div>
       </section>
       <section class="right_column">
